--- a/SOFTWARE/HiSLIP.ioc
+++ b/SOFTWARE/HiSLIP.ioc
@@ -34,7 +34,7 @@ LWIP.BSP.number=1
 LWIP.DEFAULT_THREAD_PRIO=6
 LWIP.DEFAULT_THREAD_STACKSIZE=1024
 LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,MEM_SIZE,LWIP_RAM_HEAP_POINTER,PBUF_POOL_BUFSIZE,MEMP_NUM_LOCALHOSTLIST,MEMP_NUM_TCP_PCB,TCPIP_MBOX_SIZE,DEFAULT_THREAD_STACKSIZE,TCPIP_THREAD_STACKSIZE,LWIP_SOCKET,MEMP_NUM_RAW_PCB,MEMP_NUM_PBUF,MEMP_NUM_TCP_SEG,MEMP_NUM_UDP_PCB,DEFAULT_THREAD_PRIO,TCPIP_THREAD_PRIO,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN
-LWIP.IP_ADDRESS=192.168.001.002
+LWIP.IP_ADDRESS=192.168.001.004
 LWIP.LWIP_DHCP=0
 LWIP.LWIP_RAM_HEAP_POINTER=0x30020000
 LWIP.LWIP_SOCKET=0
@@ -246,8 +246,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=VXI11.ioc
-ProjectManager.ProjectName=VXI11
+ProjectManager.ProjectFileName=HiSLIP.ioc
+ProjectManager.ProjectName=HiSLIP
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
