--- a/SOFTWARE/HiSLIP.ioc
+++ b/SOFTWARE/HiSLIP.ioc
@@ -33,17 +33,25 @@ KeepUserPlacement=false
 LWIP.BSP.number=1
 LWIP.DEFAULT_THREAD_PRIO=6
 LWIP.DEFAULT_THREAD_STACKSIZE=1024
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,MEM_SIZE,LWIP_RAM_HEAP_POINTER,PBUF_POOL_BUFSIZE,MEMP_NUM_LOCALHOSTLIST,MEMP_NUM_TCP_PCB,TCPIP_MBOX_SIZE,DEFAULT_THREAD_STACKSIZE,TCPIP_THREAD_STACKSIZE,LWIP_SOCKET,MEMP_NUM_RAW_PCB,MEMP_NUM_PBUF,MEMP_NUM_TCP_SEG,MEMP_NUM_UDP_PCB,DEFAULT_THREAD_PRIO,TCPIP_THREAD_PRIO,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,MEM_SIZE,LWIP_RAM_HEAP_POINTER,PBUF_POOL_BUFSIZE,MEMP_NUM_LOCALHOSTLIST,MEMP_NUM_TCP_PCB,TCPIP_MBOX_SIZE,DEFAULT_THREAD_STACKSIZE,TCPIP_THREAD_STACKSIZE,LWIP_SOCKET,MEMP_NUM_RAW_PCB,MEMP_NUM_PBUF,MEMP_NUM_TCP_SEG,MEMP_NUM_UDP_PCB,DEFAULT_THREAD_PRIO,TCPIP_THREAD_PRIO,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN,LWIP_NUM_NETIF_CLIENT_DATA,LWIP_NETIF_HOSTNAME,MEM_LIBC_MALLOC,MEMP_MEM_MALLOC,MEMP_MEM_INIT,LWIP_IGMP,LWIP_MDNS,LWIP_UDP
 LWIP.IP_ADDRESS=192.168.001.004
 LWIP.LWIP_DHCP=0
+LWIP.LWIP_IGMP=1
+LWIP.LWIP_MDNS=1
+LWIP.LWIP_NETIF_HOSTNAME=1
+LWIP.LWIP_NUM_NETIF_CLIENT_DATA=1
 LWIP.LWIP_RAM_HEAP_POINTER=0x30020000
 LWIP.LWIP_SOCKET=0
+LWIP.LWIP_UDP=1
+LWIP.MEMP_MEM_INIT=1
+LWIP.MEMP_MEM_MALLOC=1
 LWIP.MEMP_NUM_LOCALHOSTLIST=1
 LWIP.MEMP_NUM_PBUF=20
 LWIP.MEMP_NUM_RAW_PCB=20
 LWIP.MEMP_NUM_TCP_PCB=20
 LWIP.MEMP_NUM_TCP_SEG=20
 LWIP.MEMP_NUM_UDP_PCB=20
+LWIP.MEM_LIBC_MALLOC=0
 LWIP.MEM_SIZE=131048
 LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.PBUF_POOL_BUFSIZE=1024
