Got mDNS to work partly (mDNS blocks TCP task and ping). Need to change the MAC filter setup. Code add in ethernetif_fix.c

--- a/SOFTWARE/HiSLIP.ioc
+++ b/SOFTWARE/HiSLIP.ioc
@@ -31,24 +31,41 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LWIP.BSP.number=1
+LWIP.DEFAULT_TCP_RECVMBOX_SIZE=20
 LWIP.DEFAULT_THREAD_PRIO=6
 LWIP.DEFAULT_THREAD_STACKSIZE=1024
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,MEM_SIZE,LWIP_RAM_HEAP_POINTER,PBUF_POOL_BUFSIZE,MEMP_NUM_LOCALHOSTLIST,MEMP_NUM_TCP_PCB,TCPIP_MBOX_SIZE,DEFAULT_THREAD_STACKSIZE,TCPIP_THREAD_STACKSIZE,LWIP_SOCKET,MEMP_NUM_RAW_PCB,MEMP_NUM_PBUF,MEMP_NUM_TCP_SEG,MEMP_NUM_UDP_PCB,DEFAULT_THREAD_PRIO,TCPIP_THREAD_PRIO,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN,LWIP_NUM_NETIF_CLIENT_DATA,LWIP_NETIF_HOSTNAME,MEM_LIBC_MALLOC,MEMP_MEM_MALLOC,MEMP_MEM_INIT,LWIP_IGMP,LWIP_MDNS,LWIP_UDP
+LWIP.DEFAULT_UDP_RECVMBOX_SIZE=20
+LWIP.DNS_MAX_RETRIES=20
+LWIP.DNS_MAX_SERVERS=20
+LWIP.DNS_TABLE_SIZE=8
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,MEM_SIZE,LWIP_RAM_HEAP_POINTER,PBUF_POOL_BUFSIZE,MEMP_NUM_LOCALHOSTLIST,MEMP_NUM_TCP_PCB,TCPIP_MBOX_SIZE,DEFAULT_THREAD_STACKSIZE,TCPIP_THREAD_STACKSIZE,LWIP_SOCKET,MEMP_NUM_RAW_PCB,MEMP_NUM_PBUF,MEMP_NUM_TCP_SEG,MEMP_NUM_UDP_PCB,DEFAULT_THREAD_PRIO,TCPIP_THREAD_PRIO,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN,LWIP_NUM_NETIF_CLIENT_DATA,LWIP_NETIF_HOSTNAME,MEM_LIBC_MALLOC,MEMP_MEM_MALLOC,MEMP_MEM_INIT,LWIP_IGMP,LWIP_MDNS,LWIP_UDP,LWIP_RAW,LWIP_DNS,LWIP_AUTOIP,DEFAULT_TCP_RECVMBOX_SIZE,DEFAULT_UDP_RECVMBOX_SIZE,DNS_MAX_RETRIES,DNS_MAX_SERVERS,DNS_TABLE_SIZE,MEMP_NUM_DNS_API_MSG,MEMP_NUM_SOCKET_SETGETSOCKOPT_DATA,MEMP_NUM_NETIFAPI_MSG,MEMP_NUM_API_MSG,MEMP_NUM_SELECT_CB,MEMP_NUM_TCPIP_MSG_API,MEMP_NUM_NETCONN,MEMP_NUM_NETBUF,MEMP_NUM_TCP_PCB_LISTEN
 LWIP.IP_ADDRESS=192.168.001.004
+LWIP.LWIP_AUTOIP=1
 LWIP.LWIP_DHCP=0
+LWIP.LWIP_DNS=1
 LWIP.LWIP_IGMP=1
 LWIP.LWIP_MDNS=1
 LWIP.LWIP_NETIF_HOSTNAME=1
 LWIP.LWIP_NUM_NETIF_CLIENT_DATA=1
 LWIP.LWIP_RAM_HEAP_POINTER=0x30020000
+LWIP.LWIP_RAW=1
 LWIP.LWIP_SOCKET=0
 LWIP.LWIP_UDP=1
 LWIP.MEMP_MEM_INIT=1
 LWIP.MEMP_MEM_MALLOC=1
+LWIP.MEMP_NUM_API_MSG=20
+LWIP.MEMP_NUM_DNS_API_MSG=20
 LWIP.MEMP_NUM_LOCALHOSTLIST=1
+LWIP.MEMP_NUM_NETBUF=20
+LWIP.MEMP_NUM_NETCONN=20
+LWIP.MEMP_NUM_NETIFAPI_MSG=20
 LWIP.MEMP_NUM_PBUF=20
 LWIP.MEMP_NUM_RAW_PCB=20
+LWIP.MEMP_NUM_SELECT_CB=20
+LWIP.MEMP_NUM_SOCKET_SETGETSOCKOPT_DATA=20
+LWIP.MEMP_NUM_TCPIP_MSG_API=20
 LWIP.MEMP_NUM_TCP_PCB=20
+LWIP.MEMP_NUM_TCP_PCB_LISTEN=20
 LWIP.MEMP_NUM_TCP_SEG=20
 LWIP.MEMP_NUM_UDP_PCB=20
 LWIP.MEM_LIBC_MALLOC=0
