--- a/SOFTWARE/HiSLIP.ioc
+++ b/SOFTWARE/HiSLIP.ioc
@@ -39,7 +39,7 @@ LWIP.DNS_MAX_RETRIES=20
 LWIP.DNS_MAX_SERVERS=20
 LWIP.DNS_TABLE_SIZE=8
 LWIP.HTTPD_MAX_RETRIES=10
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,MEM_SIZE,LWIP_RAM_HEAP_POINTER,PBUF_POOL_BUFSIZE,MEMP_NUM_LOCALHOSTLIST,MEMP_NUM_TCP_PCB,TCPIP_MBOX_SIZE,DEFAULT_THREAD_STACKSIZE,TCPIP_THREAD_STACKSIZE,LWIP_SOCKET,MEMP_NUM_RAW_PCB,MEMP_NUM_PBUF,MEMP_NUM_TCP_SEG,MEMP_NUM_UDP_PCB,DEFAULT_THREAD_PRIO,TCPIP_THREAD_PRIO,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN,LWIP_NUM_NETIF_CLIENT_DATA,LWIP_NETIF_HOSTNAME,MEM_LIBC_MALLOC,MEMP_MEM_MALLOC,MEMP_MEM_INIT,LWIP_IGMP,LWIP_MDNS,LWIP_UDP,LWIP_RAW,LWIP_DNS,LWIP_AUTOIP,DEFAULT_TCP_RECVMBOX_SIZE,DEFAULT_UDP_RECVMBOX_SIZE,DNS_MAX_RETRIES,DNS_MAX_SERVERS,DNS_TABLE_SIZE,MEMP_NUM_DNS_API_MSG,MEMP_NUM_SOCKET_SETGETSOCKOPT_DATA,MEMP_NUM_NETIFAPI_MSG,MEMP_NUM_API_MSG,MEMP_NUM_SELECT_CB,MEMP_NUM_TCPIP_MSG_API,MEMP_NUM_NETCONN,MEMP_NUM_NETBUF,MEMP_NUM_TCP_PCB_LISTEN,LWIP_HTTPD,LWIP_HTTPD_CGI,LWIP_HTTPD_CGI_SSI,LWIP_HTTPD_SSI,LWIP_HTTPD_MAX_CGI_PARAMETERS,LWIP_HTTPD_MAX_TAG_NAME_LEN,LWIP_HTTPD_MAX_TAG_INSERT_LEN,HTTPD_MAX_RETRIES,LWIP_HTTPD_MAX_REQUEST_URI_LEN,LWIP_HTTPD_POST_MAX_RESPONSE_URI_LEN
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,MEM_SIZE,LWIP_RAM_HEAP_POINTER,PBUF_POOL_BUFSIZE,MEMP_NUM_LOCALHOSTLIST,MEMP_NUM_TCP_PCB,TCPIP_MBOX_SIZE,DEFAULT_THREAD_STACKSIZE,TCPIP_THREAD_STACKSIZE,LWIP_SOCKET,MEMP_NUM_RAW_PCB,MEMP_NUM_PBUF,MEMP_NUM_TCP_SEG,MEMP_NUM_UDP_PCB,DEFAULT_THREAD_PRIO,TCPIP_THREAD_PRIO,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN,LWIP_NUM_NETIF_CLIENT_DATA,LWIP_NETIF_HOSTNAME,MEM_LIBC_MALLOC,MEMP_MEM_MALLOC,MEMP_MEM_INIT,LWIP_IGMP,LWIP_MDNS,LWIP_UDP,LWIP_RAW,LWIP_DNS,LWIP_AUTOIP,DEFAULT_TCP_RECVMBOX_SIZE,DEFAULT_UDP_RECVMBOX_SIZE,DNS_MAX_RETRIES,DNS_MAX_SERVERS,DNS_TABLE_SIZE,MEMP_NUM_DNS_API_MSG,MEMP_NUM_SOCKET_SETGETSOCKOPT_DATA,MEMP_NUM_NETIFAPI_MSG,MEMP_NUM_API_MSG,MEMP_NUM_SELECT_CB,MEMP_NUM_TCPIP_MSG_API,MEMP_NUM_NETCONN,MEMP_NUM_NETBUF,MEMP_NUM_TCP_PCB_LISTEN,LWIP_HTTPD,LWIP_HTTPD_CGI,LWIP_HTTPD_CGI_SSI,LWIP_HTTPD_SSI,LWIP_HTTPD_MAX_CGI_PARAMETERS,LWIP_HTTPD_MAX_TAG_NAME_LEN,LWIP_HTTPD_MAX_TAG_INSERT_LEN,HTTPD_MAX_RETRIES,LWIP_HTTPD_MAX_REQUEST_URI_LEN,LWIP_HTTPD_POST_MAX_RESPONSE_URI_LEN,LWIP_MDNS_RESPONDER,MDNS_MAX_SERVICES,MDNS_RESP_USENETIF_EXTCALLBACK,LWIP_NETIF_EXT_STATUS_CALLBACK
 LWIP.IP_ADDRESS=192.168.001.004
 LWIP.LWIP_AUTOIP=1
 LWIP.LWIP_DHCP=0
@@ -55,12 +55,16 @@ LWIP.LWIP_HTTPD_POST_MAX_RESPONSE_URI_LEN=256
 LWIP.LWIP_HTTPD_SSI=1
 LWIP.LWIP_IGMP=1
 LWIP.LWIP_MDNS=1
+LWIP.LWIP_MDNS_RESPONDER=1
+LWIP.LWIP_NETIF_EXT_STATUS_CALLBACK=1
 LWIP.LWIP_NETIF_HOSTNAME=1
 LWIP.LWIP_NUM_NETIF_CLIENT_DATA=1
 LWIP.LWIP_RAM_HEAP_POINTER=0x30020000
 LWIP.LWIP_RAW=1
 LWIP.LWIP_SOCKET=0
 LWIP.LWIP_UDP=1
+LWIP.MDNS_MAX_SERVICES=1
+LWIP.MDNS_RESP_USENETIF_EXTCALLBACK=1
 LWIP.MEMP_MEM_INIT=1
 LWIP.MEMP_MEM_MALLOC=1
 LWIP.MEMP_NUM_API_MSG=20
